--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -24,6 +24,7 @@
                 <td><%= visualization.title %></td>
                 <td><%= visualization.type.humanize %></td>
                 <td><%= visualization.datum.name %></td>
+                <td><%= link_to 'Share', visualization, target: '_blank' %></td>
                 <td><%= link_to 'Show', visualization, target: '_blank' %></td>
                 <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
                 <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %></td>
