--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -24,7 +24,7 @@
                 <td><%= visualization.title %></td>
                 <td><%= visualization.type.humanize %></td>
                 <td><%= visualization.datum.name %></td>
-                <td><%= link_to 'Share', visualization, target: '_blank' %></td>
+                <td><%= link_to 'Share', '', onclick: 'share("'+visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %></td>
                 <td><%= link_to 'Show', visualization, target: '_blank' %></td>
                 <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
                 <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %></td>
@@ -33,6 +33,66 @@
           </tbody>
         </table>
       </div>
+
+      <!-- Modal -->
+      <style>
+        .form-group {
+            margin: 0;
+            width: 35%;
+        }
+      </style>
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Share</h4>
+            </div>
+            <div class="modal-body">
+              <h4>Iframe</h4>
+              <div class="form-group" style="width: 100%">
+                <textarea class="form-control" id="iframe-content"></textarea>
+              </div>
+              <h4>Image</h4>
+              <form class="form-inline" id="saveForm" action="" target="_blank">
+                <input hidden name="save" placeholder="Height" value="true">
+
+                <div class="form-group">
+                  <label class="sr-only" for="widthInput">Width</label>
+                  <div class="input-group">
+                    <div class="input-group-addon">Width</div>
+                    <input type="number" class="form-control" id="widthInput" name="width" value="800">
+                    <div class="input-group-addon">px</div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label class="sr-only" for="heightInput">Height</label>
+                  <div class="input-group">
+                    <div class="input-group-addon">Height</div>
+                    <input type="number" class="form-control" id="heightInput" name="height" value="600">
+                    <div class="input-group-addon">px</div>
+                  </div>
+                </div>
+
+                <button class="btn btn-primary">Generate</button>
+              </form>
+
+              <div class="well" id="image-link" style="display: none"></div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        var share = function(url) {
+          $("#saveForm").attr('action', url);
+          $("#iframe-content").text('<iframe src="'+url+'" frameborder="0" height="100%" width="100%"></iframe>');
+        }
+      </script>
 
       <div class="bs-component">
         <h4>Create visualizations</h4>
