--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,9 @@ $nprogress-color: #fff;
 .breadcrumb > li {
   padding-right: 5px;
 }
+
+.navbar-avatar {
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
