--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,8 +17,7 @@
           
         </li>
         <li>
-          <% if user_signed_in? %>
-            <a href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><%= current_user.email %>
+          <% if user_signed_in? %><a class="navbar-email" href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><%= image_tag avatar_url(current_user), class: "navbar-avatar" %><%= current_user.email %>
               <b class="caret"></b><div class="ripple-container"></div></a>
             <ul class="dropdown-menu">
               <li><%= active_link_to 'Account', edit_user_registration_path, wrap_tag: :li %></li>
