--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -1,3 +1,5 @@
+<% visualizations = @datum.visualizations.page(params[:page]) %>
+
 <div class="bs-docs-section">
   <div class="row">
     <div class="col-md-12">
@@ -19,7 +21,7 @@
           </thead>
         
           <tbody>
-            <% @datum.visualizations.each do |visualization| %>
+            <% visualizations.each do |visualization| %>
               <tr>
                 <td><%= visualization.title %></td>
                 <td><%= visualization.type.humanize %></td>
@@ -33,6 +35,8 @@
           </tbody>
         </table>
       </div>
+
+      <%= paginate visualizations %>
 
       <!-- Modal -->
       <style>
