--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -6,7 +6,7 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th>Last modified</th>
+        <th>Modified</th>
         <th>Name</th>
         <th>Items</th>
         <th colspan="3"></th>
