--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -1,4 +1,4 @@
-<% visualizations = @datum.visualizations.page(params[:page]) %>
+<% visualizations = @datum.visualizations.order("updated_at DESC").page(params[:page]) %>
 
 <div class="bs-docs-section">
   <div class="row">
@@ -16,6 +16,7 @@
               <th>Title</th>
               <th>Type</th>
               <th>Datum</th>
+              <th>Modified</th>
               <th></th>
             </tr>
           </thead>
@@ -26,6 +27,7 @@
                 <td><%= visualization.title %></td>
                 <td><%= visualization.type.humanize %></td>
                 <td><%= visualization.datum.name %></td>
+                <td><%= I18n.l visualization.updated_at.localtime %></td>
                 <td><%= link_to 'Share', '', onclick: 'share("'+visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %></td>
                 <td><%= link_to 'Show', visualization, target: '_blank' %></td>
                 <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
