--- a/app/views/visualizations/show.html.erb
+++ b/app/views/visualizations/show.html.erb
@@ -110,6 +110,12 @@
       background: #eaeaea;
     }
 
+    .last-modified {
+      position: absolute;
+      right: 15px;
+      bottom: 15px;
+    }
+
     .credit-link {
       position: absolute;
       right: 15px;
@@ -125,6 +131,7 @@
       <div id="sequence"></div>
       <div id="chart"></div>
       <em class="caption"><%= @visualization.caption %></em>
+      <p class="last-modified">Last modified <%= I18n.l (@visualization.updated_at > @visualization.datum.updated_at ? @visualization : @visualization.datum).updated_at.localtime, format: :long %></p>
       <p class="credit-link">visualized with <%= link_to 'Insightful', root_url, target: '_blank' %></p>
   </div>
 
