making some changes

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -168,7 +168,7 @@
     for (var i = 0; i < selectize.getValue().length; i++) {
       addNode(selectize.getValue()[i]);
     }
-    linkNodes();
+    linkNodes(graph, data);
     graphCopy = jQuery.extend(true, {}, graph)
     $("#saveButton").show();
     drawSankey(graph);
@@ -199,43 +199,4 @@
     }
   }
 
-  var linkNodes = function() {
-    var items = JSON.parse(JSON.stringify(data["items"]))
-    var loop = graph.nodes.length;
-
-    for (var i = 0; i < loop; i++) {
-      for (var j = 0; j < loop; j++) {
-        var link = {"source":i,"target":j,"value":0};
-        graph.links.push(link);
-      }
-    }
-    var time = new Date().getTime()
-    console.log("start")
-    for (var i = items.length - 1; i >= 0; i--) {
-      var item = items[i];
-
-      for (var j = 0; j < loop; j++) {
-        var ff = graph.nodes[j];
-        if(item[ff.header] == ff.name){
-          for (var k = j; k < loop; k++) {
-            var tt = graph.nodes[k];
-            if(ff.header == tt.header) continue;
-            if(item[ff.header] == ff.name && item[tt.header] == tt.name){
-              if (item["Freq"] != undefined)
-                graph.links[j*loop+k].value += parseInt(item["Freq"]);
-              else graph.links[j*loop+k].value++;
-              delete item[ff.header]
-            }
-          }
-        }
-      }
-    }
-    console.log(new Date().getTime() - time)
-
-    for (var i = graph.links.length - 1; i >= 0; i--) {
-      if (graph.links[i].value == 0) {
-        graph.links.splice(i, 1);
-      }
-    }
-  }
 </script>
