--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,17 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="form-group label-placeholder is-empty">
-    <%= f.label :email, class: "control-label" %>
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
-    <span class="material-input"></span>
+      <div class="form-group label-placeholder is-empty">
+        <%= f.label :email, class: "control-label" %>
+        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        <span class="material-input"></span>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-group">
-    <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
