--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,47 +1,51 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row">
+  <div class="col-md-6">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="form-group label-placeholder is-empty">
-    <%= f.label :email, class: "control-label" %>
-    <%= f.email_field :email, autofocus: true, class: "form-control active" %>
-    <span class="material-input"></span>
+      <div class="form-group label-placeholder is-empty">
+        <%= f.label :email, class: "control-label" %>
+        <%= f.email_field :email, autofocus: true, class: "form-control active" %>
+        <span class="material-input"></span>
+      </div>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="form-group label-placeholder is-empty">
+        <%= f.label :password, class: "control-label" %>
+        <%= f.password_field :password, autocomplete: :off, class: "form-control" %>
+        <p class="help-block">leave blank if you don't want to change it</p>
+        <span class="material-input"></span>
+      </div>
+
+      
+      <div class="form-group label-placeholder is-empty">
+        <%= f.label :password_confirmation, class: "control-label" %>
+        <%= f.password_field :password_confirmation, autocomplete: :off, class: "form-control" %>
+        <p class="help-block">leave blank if you don't want to change it</p>
+        <span class="material-input"></span>
+      </div>
+
+
+      <div class="form-group label-placeholder is-empty">
+        <%= f.label :current_password, class: "control-label" %>
+        <%= f.password_field :current_password, autocomplete: :off, class: "form-control" %>
+        <p class="help-block">we need your current password to confirm your changes</p>
+        <span class="material-input"></span>
+      </div>
+
+      
+      <div class="form-group">
+        <%= f.submit "Update", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+
+    <h3>Cancel my account</h3>
+
+    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "You are about to cancel your account. Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="form-group label-placeholder is-empty">
-    <%= f.label :password, class: "control-label" %>
-    <%= f.password_field :password, autocomplete: :off, class: "form-control" %>
-    <p class="help-block">leave blank if you don't want to change it</p>
-    <span class="material-input"></span>
-  </div>
-
-  
-  <div class="form-group label-placeholder is-empty">
-    <%= f.label :password_confirmation, class: "control-label" %>
-    <%= f.password_field :password_confirmation, autocomplete: :off, class: "form-control" %>
-    <p class="help-block">leave blank if you don't want to change it</p>
-    <span class="material-input"></span>
-  </div>
-
-
-  <div class="form-group label-placeholder is-empty">
-    <%= f.label :current_password, class: "control-label" %>
-    <%= f.password_field :current_password, autocomplete: :off, class: "form-control" %>
-    <p class="help-block">we need your current password to confirm your changes</p>
-    <span class="material-input"></span>
-  </div>
-
-  
-  <div class="form-group">
-    <%= f.submit "Update", class: "btn btn-primary" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "You are about to cancel your account. Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+</div>
