changed buttons to raised and have waves effect

--- a/app/views/data/new.html.erb
+++ b/app/views/data/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', data_path, class: "btn btn-sm" %>
+<%= link_to 'Back', data_path, class: "btn btn-sm waves-effect" %>
