--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -19,8 +19,8 @@
       </div>
 
       <div class="bs-component">
-        <%= link_to 'Edit', edit_datum_path(@datum), class: "btn btn-sm" %>
-        <%= link_to 'Back', data_path, class: "btn btn-sm" %>
+        <%= link_to 'Edit', edit_datum_path(@datum), class: "btn btn-sm waves-effect" %>
+        <%= link_to 'Back', data_path, class: "btn btn-sm waves-effect" %>
       </div>
     </div>
   </div>
