--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -56,6 +56,6 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.button class: "btn btn-primary waves-effect" %>
+    <%= f.button class: "btn btn-primary waves-effect btn-raised" %>
   </div>
 <% end %>
