--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <div class="form-group">
-          <%= f.submit "Change my password", class: "btn btn-primary" %>
+          <%= f.submit "Change my password", class: "btn btn-primary btn-raised waves-effect" %>
       </div>
     <% end %>
 
