--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="form-group">
-          <%= f.submit "Resend unlock instructions", class: "btn btn-primary" %>
+          <%= f.submit "Resend unlock instructions", class: "btn btn-primary btn-raised waves-effect" %>
       </div>
     <% end %>
 
