--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="form-group is-empty is-fileinput">
-    <%= f.file_field :file %>
+    <%= f.file_field :file, accept: ".csv, .txt" %>
     <input type="text" readonly="" class="form-control" placeholder="Upload a CSV file">
   </div>
 
