added a helper to add javascript to head from view

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -1,3 +1,4 @@
+<% javascript 'draw/'+action_name.dasherize %>
 <style>
 
   .node rect {
@@ -65,7 +66,6 @@
 
 <div id="chart"></div>
 
-<%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
   var data,
     graph,
