--- a/app/views/data/draw/stacked_bar.html.erb
+++ b/app/views/data/draw/stacked_bar.html.erb
@@ -1,3 +1,4 @@
+<% javascript 'draw/'+action_name.dasherize %>
 <style>
 
   .axis path,
@@ -58,7 +59,6 @@
 
 <div id="chart"></div>
 
-<%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
   var data, selects = ["cat", "stack", "measure"], measure = 'false';
 
