--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -1,3 +1,4 @@
+<% javascript 'draw/'+action_name.dasherize %>
 <style>
 
 #main {
@@ -66,7 +67,6 @@ path {
 <div id="chart"></div>
 <!-- <pre id="json"></pre> -->
 
-<%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
   var data, levels, measure = 'false';
 
