--- a/app/views/visualizations/show.html.erb
+++ b/app/views/visualizations/show.html.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag 'draw/'+@visualization.type.dasherize %>
+  <% javascript 'draw/'+@visualization.type.dasherize %>
   <%= csrf_meta_tags %>
 
   <style>
