--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -81,6 +81,7 @@ path {
 
   var updateMainSelect = function(keys) {
     $.each(keys, function(i, key) {
+      if (data["numbers"].indexOf(key) != -1) return true;
       $("#select-main")
         .append($("<option></option>")
         .attr("value",key)
@@ -95,6 +96,7 @@ path {
 
   var updateValuesSelect = function(keys) {
     $.each(keys, function(i, key) {
+      if (data["numbers"].indexOf(key) == -1) return true;
       $("#select-size")
         .append($("<option></option>")
         .attr("value",key)
