draw js added to partial rather than the head to allow turbolink

--- a/app/views/data/draw/normalized_stacked_bar.html.erb
+++ b/app/views/data/draw/normalized_stacked_bar.html.erb
@@ -1,4 +1,3 @@
-<% javascript 'draw/'+action_name.dasherize %>
 <style>
 
   .axis path,
@@ -59,6 +58,7 @@
 
 <div id="chart"></div>
 
+<%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
   var data, selects = ["cat", "stack", "measure"], measure = 'false';
 
