--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -68,7 +68,7 @@ path {
 
 <%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
-  var data, levels, measure = 'false';
+  var data, levels, measure = 'count';
 
   // drawStackedBars(data);
   var req = $.get("<%= datum_path(@datum, format: :json) %>");
@@ -103,8 +103,8 @@ path {
         .text(key)); 
     })
     $("#select-size")
-      .append($("<option></option>")
-      .attr("value",false)
+      .append($("<option selected></option>")
+      .attr("value","count")
       .text("Count records")); 
     $("#select-size").selectize();
     $("#select-size").on("change" ,function() {
