sankey reset before draw

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -199,6 +199,7 @@
   }
 
   var buttonClick = function() {
+    reset();
     for (var i = 0; i < selectize.getValue().length; i++) {
       addNode(selectize.getValue()[i]);
     }
