--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @visualization %> |
+<%= link_to 'Show', @visualization, target: 'blank' %> |
 <%= link_to 'Back', @visualization.datum %>
