--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,3 +34,15 @@ $nprogress-color: #fff;
   margin-top: -5px;
   float: left;
 }
+
+.visualization-container {
+    width: 100%;
+    height: 700px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#chart {
+  text-align: center;
+}
