--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -65,9 +65,6 @@
   </div>
 </div>
 
-<div class="row" id="selectedItem">
-</div>
-
 <div class="form-group">
   <a class="btn btn-primary" onclick="buttonClick()">Draw</a>
   <a class="btn" onclick="reset()">Reset</a>
@@ -75,7 +72,9 @@
 
 <button id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</button>
 
-<div id="chart"></div>
+<div class="visualization-container">
+  <div id="chart"></div>
+</div>
 
 <%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
