--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -63,8 +63,9 @@ path {
 <button id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</button>
 
 <div id="sequence"></div>
-<div id="chart"></div>
-<!-- <pre id="json"></pre> -->
+<div class="visualization-container">
+  <div id="chart"></div>
+</div>
 
 <%= javascript_include_tag 'draw/'+action_name.dasherize %>
 <script>
