data is correctly unique

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ $nprogress-color: #fff;
 
 .visualization-container {
     width: 100%;
-    height: 700px;
+    height: 100%;
     padding: 15px;
     margin-right: auto;
     margin-left: auto;
@@ -45,4 +45,10 @@ $nprogress-color: #fff;
 
 #chart {
   text-align: center;
+}
+
+.draw-container {
+  height: 700px;
+  border: 1px dashed #aaa;
+  margin-bottom: 30px;
 }
