--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -62,9 +62,11 @@ path {
 
 <button id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</button>
 
-<div id="sequence"></div>
-<div class="visualization-container">
-  <div id="chart"></div>
+<div class="draw-container">
+  <div id="sequence"></div>
+  <div class="visualization-container">
+    <div id="chart"></div>
+  </div>
 </div>
 
 <%= javascript_include_tag 'draw/'+action_name.dasherize %>
