--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -40,27 +40,40 @@
       <%= select_tag :select_numbers, options_for_select([nil]+eval(@datum.headers)), class: "form-control", onchange: "update(this, '#datum_numbers')" %>
       <p class="help-block">Values of selected properties will be treated as numbers.</p>
     </div>
-
-    <script>
-      $(document).ready(function() {
-        $("#select_ignored").selectize({
-          maxItems:<%= eval(@datum.headers).count %>,
-          items: JSON.parse($("#datum_ignored").val() || '[]')
-        });
-        $("#select_numbers").selectize({
-          maxItems:<%= eval(@datum.headers).count %>,
-          items: JSON.parse($("#datum_numbers").val() || '[]')
-        });
-      })
-
-      var update = function(el, input) {
-        $(input).val(JSON.stringify($(el).val() || '[]'));
-        console.log($(input).val())
-      }
-    </script>
   <% end %>
 
   <div class="form-group">
     <%= f.button class: "btn btn-primary waves-effect btn-raised" %>
   </div>
 <% end %>
+
+<script>
+  var datum_content_changed = false;
+
+  $('#datum_content').on('input',function(e){
+   datum_content_changed = true;
+  });
+
+  $('form').on('submit', function(e) {
+    if(!datum_content_changed)
+      $('#datum_content').attr('name', null);
+  })
+
+  <% if params[:action] == "edit" %>
+    $(document).ready(function() {
+      $("#select_ignored").selectize({
+        maxItems:<%= eval(@datum.headers).count %>,
+        items: JSON.parse($("#datum_ignored").val() || '[]')
+      });
+      $("#select_numbers").selectize({
+        maxItems:<%= eval(@datum.headers).count %>,
+        items: JSON.parse($("#datum_numbers").val() || '[]')
+      });
+    })
+
+    var update = function(el, input) {
+      $(input).val(JSON.stringify($(el).val() || '[]'));
+      console.log($(input).val())
+    }
+  <% end %>
+</script>
