change thumb display

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,10 +53,10 @@ $nprogress-color: #fff;
   margin-bottom: 30px;
 }
 
-img.visualization-thumb {
+.thumb-img {
   width: 100%;
 }
 
-img.visualization-thumb:hover {
-  opacity: .5;
+.thumb-img:hover {
+  opacity: .8;
 }
