--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -44,7 +44,7 @@ path {
 <div class="row">
   <div class="col-sm-9">
     <div class="form-group">
-      <label for="select-main">Compare</label>
+      <label for="select-main">Select variables you want to compare</label>
       <select id="select-main" class="form-control">
         <option disabled selected> loading... </option>
       </select>
@@ -52,7 +52,7 @@ path {
   </div>
   <div class="col-sm-3">
     <div class="form-group">
-      <label for="select-size">Based on</label>
+      <label for="select-size">Compare them on</label>
       <select id="select-size" class="form-control">
         <option disabled selected> loading... </option>
       </select>
