--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,6 +11,7 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li><%= active_link_to 'Data', data_path, wrap_tag: :li %></li>
+        <li><%= active_link_to 'Visualizations', visualizations_path, wrap_tag: :li %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown open">
