--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -12,18 +12,20 @@
   <% end %>
 
   <div class="form-group label-static is-empty">
-    <%= f.label :name, class: "control-label" %>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.label :name, 'Data name', class: "control-label" %>
+    <%= f.text_field :name, class: "form-control", placeholder: 'Data name' %>
+    <p class="help-block">Give a name or short description for the data so you do not have to wonder what it contains later.</p>
   </div>
 
   <div class="form-group is-empty is-fileinput">
-    <%= f.file_field :file, accept: ".csv, .txt" %>
+    <%= f.label :file, 'Upload a CSV file', class: "control-label" %>
+    <%= f.file_field :file, accept: ".csv" %>
     <input type="text" readonly="" class="form-control" placeholder="Upload a CSV file">
   </div>
 
   <div class="form-group label-floating is-empty">
-    <%= f.text_area :content, class: "form-control", rows: 10, placeholder: "Or paste the CSV formatted data directly here" %>
-    <p class="help-block">Will be overridden with the content of the <code>file</code> above if applicable.</p>
+    <%= f.text_area :content, class: "form-control", rows: 6, placeholder: "You can also paste your CSV here" %>
+    <p class="help-block">Leave this empty if you are uploading a <code>file</code>. Will be overridden with the content of the <code>file</code> above if applicable.</p>
   </div>
 
   <% if params[:action] == "edit" %>
@@ -43,7 +45,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.button class: "btn btn-primary waves-effect btn-raised" %>
+    <%= f.button 'Save', class: "btn btn-primary waves-effect btn-raised" %>
   </div>
 <% end %>
 
