--- a/app/views/data/draw/normalized_stacked_bar.html.erb
+++ b/app/views/data/draw/normalized_stacked_bar.html.erb
@@ -30,7 +30,7 @@
 <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="select-category">Compare</label>
+      <label for="select-category">Select variable you want to compare</label>
       <select id="select-category" class="form-control">
         <option disabled selected> loading... </option>
       </select>
@@ -38,7 +38,7 @@
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="select-stack">On</label>
+      <label for="select-stack">Select variable to compare them on</label>
       <select id="select-stack" class="form-control">
         <option disabled selected> loading... </option>
       </select>
