--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -49,7 +49,7 @@
 <div class="row">
   <div class="col-sm-9">
     <div class="form-group">
-      <label for="select-main">Compare</label>
+      <label for="select-main">Select variables you want to see the relationships between them</label>
       <select id="select-main" class="form-control">
         <option disabled selected> loading... </option>
       </select>
@@ -57,7 +57,7 @@
   </div>
   <div class="col-sm-3">
     <div class="form-group">
-      <label for="select-measure">According to</label>
+      <label for="select-measure">Relate based on</label>
       <select id="select-measure" class="form-control">
         <option disabled selected> loading... </option>
       </select>
@@ -67,7 +67,6 @@
 
 <div class="form-group">
   <a class="btn btn-primary" onclick="draw()">Draw</a>
-  <a class="btn" onclick="reset()">Reset</a>
   <a id="saveButton" onclick="save()" class="btn btn-primary" style="display: none">Save</a>
 </div>
 
@@ -78,6 +77,9 @@
 </div>
 
 <div class="row">
+  <div class="col-md-12">
+    <p>You can select which element of a variable to be shown in the sankey. To hide, click the element.</p>
+  </div>
   <div id="selectedItems"></div>
 </div>
 
