--- a/app/views/data/edit.html.erb
+++ b/app/views/data/edit.html.erb
@@ -1,8 +1,81 @@
-<h1>Editing Datum</h1>
+<h1>Edit: <%= @datum.name %></h1>
 
-<%= render 'form' %>
+<%= form_for(@datum, { :multipart => true }) do |f| %>
+  <% if @datum.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@datum.errors.count, "error") %> prohibited this datum from being saved:</h2>
 
-<div class="bs-component">
-  <%= link_to 'Show', datum_path(@datum), class: "btn btn-sm" %>
-  <%= link_to 'Back', data_path, class: "btn btn-sm" %>
-</div>
+      <ul>
+      <% @datum.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group label-static is-empty">
+    <%= f.label :name, 'Data name', class: "control-label" %>
+    <%= f.text_field :name, class: "form-control", placeholder: 'Data name' %>
+    <p class="help-block">Give a name or short description for the data so you do not have to wonder what it contains later.</p>
+  </div>
+
+  <div class="form-group is-empty is-fileinput">
+    <%= f.label :file, 'Upload new CSV file to update existing data', class: "control-label" %>
+    <%= f.file_field :file, accept: ".csv" %>
+    <input type="text" readonly="" class="form-control" placeholder="Upload new CSV file">
+  </div>
+
+  <div class="form-group label-floating is-empty">
+    <%= f.text_area :content, class: "form-control", rows: 6, placeholder: "You can also paste your new CSV here" %>
+    <p class="help-block">Leave this empty if you are uploading a <code>file</code> or do not want to update your data.</p>
+  </div>
+
+  <%= f.hidden_field :ignored, hidden: true %>
+  <%= f.hidden_field :numbers, hidden: true %>
+  <div class="form-group">
+    <%= f.label :ignore, 'What do you want to ignore from your data?', class: "control-label" %>
+    <%= select_tag :select_ignored, options_for_select([nil]+eval(@datum.headers)), class: "form-control", onchange: "update(this, '#datum_ignored')" %>
+    <p class="help-block">Values of selected properties will be ignored in processing.</p>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :numbers, 'Select columns that should be processed as numbers', class: "control-label" %>
+    <%= select_tag :select_numbers, options_for_select([nil]+eval(@datum.headers)), class: "form-control", onchange: "update(this, '#datum_numbers')" %>
+    <p class="help-block">Values of selected properties will be treated as numbers.</p>
+  </div>
+
+  <div class="form-group">
+    <%= f.button 'Update', class: "btn btn-primary waves-effect btn-raised" %>
+    <%= link_to 'Display', datum_path(@datum), class: "btn btn-sm" %>
+    <%= link_to 'Cancel', data_path, class: "btn btn-sm" %>
+  </div>
+<% end %>
+
+<script>
+  var datum_content_changed = false;
+
+  $('#datum_content').on('input',function(e){
+   datum_content_changed = true;
+  });
+
+  $('form').on('submit', function(e) {
+    if(!datum_content_changed)
+      $('#datum_content').attr('name', null);
+  })
+
+  $(document).ready(function() {
+    $("#select_ignored").selectize({
+      maxItems:<%= eval(@datum.headers).count %>,
+      items: JSON.parse($("#datum_ignored").val() || "[]")
+    });
+    $("#select_numbers").selectize({
+      maxItems:<%= eval(@datum.headers).count %>,
+      items: JSON.parse($("#datum_numbers").val() || "[]")
+    });
+  })
+
+  var update = function(el, input) {
+    $(input).val(JSON.stringify($(el).val()) || "[]");
+    console.log($(input).val())
+  }
+</script>
