--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -1,27 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Data</h1>
+<h1>Listing data</h1>
 
 <div class="table-wrapper">
   <table class="table table-striped">
     <thead>
       <tr>
-        <th>Modified</th>
         <th>Name</th>
-        <th>Visualizations</th>
-        <th colspan="3"></th>
+        <th>Last modified</th>
+        <th></th>
       </tr>
     </thead>
   
     <tbody>
       <% @data.each do |datum| %>
         <tr>
-          <td><%= I18n.l datum.updated_at.localtime, format: :long %></td>
           <td><%= datum.name %></td>
-          <td><%= datum.visualizations.count %></td>
-          <td><%= link_to 'Show', datum %></td>
-          <td><%= link_to 'Edit', edit_datum_path(datum) %></td>
-          <td><%= link_to 'Destroy', datum, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+          <td><%= I18n.l datum.updated_at.localtime, format: :long %></td>
+          <td>
+            <%= link_to 'Show', datum_path(datum) %>&nbsp;
+            <%= link_to 'Edit', edit_datum_path(datum) %>&nbsp;
+            <%= link_to 'Delete', datum, method: :delete, data: { confirm: 'Deleting this data will delete all its visualizations. Are you sure?' }, class: 'text-danger' %>
+          </td>
         </tr>
       <% end %>
     </tbody>
@@ -30,4 +30,4 @@
 
 <%= paginate @data %><br>
 
-<%= link_to 'New Datum', new_datum_path, class: 'btn btn-success waves-effect btn-raised' %>
+<%= link_to 'New Data', new_datum_path, class: 'btn btn-success waves-effect btn-raised' %>
