--- a/app/views/data/new.html.erb
+++ b/app/views/data/new.html.erb
@@ -1,5 +1,69 @@
-<h1>New Datum</h1>
+<h1>New Data</h1>
 
-<%= render 'form' %>
+<%= form_for(@datum, { :multipart => true }) do |f| %>
+  <% if @datum.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@datum.errors.count, "error") %> prohibited this datum from being saved:</h2>
 
-<%= link_to 'Back', data_path, class: "btn btn-sm waves-effect" %>
+      <ul>
+      <% @datum.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group label-static is-empty">
+    <%= f.label :name, 'Data name', class: "control-label" %>
+    <%= f.text_field :name, class: "form-control", placeholder: 'Data name' %>
+    <p class="help-block">Give a name or short description for the data so you do not have to wonder what it contains later.</p>
+  </div>
+
+  <div class="form-group is-empty is-fileinput">
+    <%= f.label :file, 'Upload a CSV file', class: "control-label" %>
+    <%= f.file_field :file, accept: ".csv" %>
+    <input type="text" readonly="" class="form-control" placeholder="Upload a CSV file">
+  </div>
+
+  <div class="form-group label-floating is-empty">
+    <%= f.text_area :content, class: "form-control", rows: 6, placeholder: "You can also paste your CSV here" %>
+    <p class="help-block">Leave this empty if you are uploading a <code>file</code>. Will be overridden with the content of the <code>file</code> above if applicable.</p>
+  </div>
+
+  <div class="form-group">
+    <%= f.button 'Save', class: "btn btn-primary waves-effect btn-raised" %>
+    <%= link_to 'Cancel', data_path, class: "btn btn-sm waves-effect" %>
+  </div>
+<% end %>
+
+<script>
+  var datum_content_changed = false;
+
+  $('#datum_content').on('input',function(e){
+   datum_content_changed = true;
+  });
+
+  $('form').on('submit', function(e) {
+    if(!datum_content_changed)
+      $('#datum_content').attr('name', null);
+  })
+
+  <% if params[:action] == "edit" %>
+    $(document).ready(function() {
+      $("#select_ignored").selectize({
+        maxItems:<%= eval(@datum.headers).count %>,
+        items: JSON.parse($("#datum_ignored").val())
+      });
+      $("#select_numbers").selectize({
+        maxItems:<%= eval(@datum.headers).count %>,
+        items: JSON.parse($("#datum_numbers").val())
+      });
+    })
+
+    var update = function(el, input) {
+      $(input).val(JSON.stringify($(el).val()));
+      console.log($(input).val())
+    }
+  <% end %>
+</script>
+
