--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -45,101 +45,106 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-12">
+  <% if !@datum.visualizations.blank? %>
+    <div class="row">
+      <div class="col-md-12">
 
-      <h3>Listing Visualizations</h3>
+        <h3>Visualizations</h3>
 
-      <div class="table-wrapper">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Type</th>
-              <th>Modified</th>
-              <th></th>
-            </tr>
-          </thead>
-        
-          <tbody>
-            <% visualizations.each do |visualization| %>
+        <div class="table-wrapper">
+          <table class="table table-striped">
+            <thead>
               <tr>
-                <td><%= visualization.title %></td>
-                <td><%= visualization.type.humanize %></td>
-                <td><%= I18n.l visualization.updated_at.localtime, format: :long %></td>
-                <td><%= link_to 'Share', '', onclick: 'share("'+visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %></td>
-                <td><%= link_to 'Show', visualization, target: '_blank' %></td>
-                <td><%= link_to 'Edit', edit_visualization_path(visualization) %></td>
-                <td><%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %></td>
+                <th>Title</th>
+                <th>Type</th>
+                <th>Modified</th>
+                <th></th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-
-      <%= paginate visualizations %>
-
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal -->
-<style>
-  .form-group {
-      margin: 0;
-      width: 35%;
-  }
-</style>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Share</h4>
-      </div>
-      <div class="modal-body">
-        <h4>Iframe</h4>
-        <div class="form-group" style="width: 100%">
-          <textarea class="form-control" id="iframe-content"></textarea>
+            </thead>
+          
+            <tbody>
+              <% visualizations.each do |visualization| %>
+                <tr>
+                  <td><%= visualization.title %></td>
+                  <td><%= visualization.type.humanize %></td>
+                  <td><%= I18n.l visualization.updated_at.localtime, format: :long %></td>
+                  <td>
+                    <%= link_to 'Share', '', onclick: 'share("'+visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %>&nbsp;&nbsp;
+                    <%= link_to 'Show', visualization %>&nbsp;&nbsp;
+                    <%= link_to 'Permalink', standalone_visualization_path(visualization), target: '_blank' %>&nbsp;&nbsp;
+                    <%= link_to 'Edit', edit_visualization_path(visualization) %>&nbsp;&nbsp;
+                    <%= link_to 'Destroy', visualization, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
-        <h4>Image</h4>
-        <form class="form-inline" id="saveForm" action="" target="_blank">
-          <input hidden name="save" placeholder="Height" value="true">
 
-          <div class="form-group">
-            <label class="sr-only" for="widthInput">Width</label>
-            <div class="input-group">
-              <div class="input-group-addon">Width</div>
-              <input type="number" class="form-control" id="widthInput" name="width" value="800">
-              <div class="input-group-addon">px</div>
-            </div>
-          </div>
+        <%= paginate visualizations %>
 
-          <div class="form-group">
-            <label class="sr-only" for="heightInput">Height</label>
-            <div class="input-group">
-              <div class="input-group-addon">Height</div>
-              <input type="number" class="form-control" id="heightInput" name="height" value="600">
-              <div class="input-group-addon">px</div>
-            </div>
-          </div>
-
-          <button class="btn btn-primary">Generate</button>
-        </form>
-
-        <div class="well" id="image-link" style="display: none"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-  </div>
-</div>
+    
+    <!-- Modal -->
+    <style>
+      .form-group {
+          margin: 0;
+          width: 35%;
+      }
+    </style>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Share</h4>
+          </div>
+          <div class="modal-body">
+            <h4>Iframe</h4>
+            <div class="form-group" style="width: 100%">
+              <textarea class="form-control" id="iframe-content"></textarea>
+            </div>
+            <h4>Image</h4>
+            <form class="form-inline" id="saveForm" action="" target="_blank">
+              <input hidden name="save" placeholder="Height" value="true">
 
-<script>
-  var share = function(url) {
-    $("#saveForm").attr('action', url);
-    $("#iframe-content").text('<iframe src="'+url+'" frameborder="0" height="100%" width="100%"></iframe>');
-  }
-</script>
+              <div class="form-group">
+                <label class="sr-only" for="widthInput">Width</label>
+                <div class="input-group">
+                  <div class="input-group-addon">Width</div>
+                  <input type="number" class="form-control" id="widthInput" name="width" value="800">
+                  <div class="input-group-addon">px</div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="sr-only" for="heightInput">Height</label>
+                <div class="input-group">
+                  <div class="input-group-addon">Height</div>
+                  <input type="number" class="form-control" id="heightInput" name="height" value="600">
+                  <div class="input-group-addon">px</div>
+                </div>
+              </div>
+
+              <button class="btn btn-primary">Generate</button>
+            </form>
+
+            <div class="well" id="image-link" style="display: none"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      var share = function(url) {
+        $("#saveForm").attr('action', url);
+        $("#iframe-content").text('<iframe src="'+url+'" frameborder="0" height="100%" width="100%"></iframe>');
+      }
+    </script>
+  <% end %>
+
+</div>
