--- a/app/views/visualizations/_form.html.erb
+++ b/app/views/visualizations/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :title, class: "form-control" %>
   </div>
 
-  <iframe src="<%= visualization_path @visualization %>" frameborder="0" height="400px" width="100%" style="border:1px dashed #bbb"></iframe>
+  <iframe src="<%= standalone_visualization_path @visualization %>" frameborder="0" height="600px" width="100%" style="border:1px dashed #bbb"></iframe>
 
   <div class="form-group label-static is-empty">
     <%= f.label :caption, class: "control-label" %>
