--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 
       <div class="form-group label-placeholder is-empty">
         <%= f.label :email, class: "control-label" %>
-        <%= f.email_field :email, autofocus: true, class: "form-control active" %>
+        <%= f.email_field :email, autofocus: false, autocomplete: :off, class: "form-control active" %>
         <span class="material-input"></span>
       </div>
 
