--- a/app/views/visualizations/_form.html.erb
+++ b/app/views/visualizations/_form.html.erb
@@ -14,13 +14,17 @@
   <div class="form-group label-static is-empty">
     <%= f.label :title, class: "control-label" %>
     <%= f.text_field :title, class: "form-control" %>
+    <p class="help-block">Give this <%= @visualization.type.humanize.downcase %> a title.</p>
   </div>
 
-  <iframe src="<%= standalone_visualization_path @visualization %>" frameborder="0" height="600px" width="100%" style="border:1px dashed #bbb"></iframe>
+  <div class="form-group">
+    <iframe src="<%= standalone_visualization_path @visualization %>" frameborder="0" height="600px" width="100%" style="border:1px dashed #bbb"></iframe>
+  </div>
 
   <div class="form-group label-static is-empty">
     <%= f.label :caption, class: "control-label" %>
     <%= f.text_field :caption, class: "form-control" %>
+    <p class="help-block">Write a short description so people know what this <%= @visualization.type.humanize.downcase %> means.</p>
   </div>
 
   <div class="form-group">
