--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <body>
   <%= render partial: "layouts/nav" %>
   <div class="container">
+    <%= alert notice, notice_type %>
     <% unless breadcrumbs.empty? %>
       <ul class="breadcrumb" style="margin-bottom: 5px;">
         <%= render_breadcrumbs :tag => :li, :separator => "" %>
